fix: force left align in databox module

--- a/app/Databox.module.sass
+++ b/app/Databox.module.sass
@@ -25,6 +25,7 @@ label.npt
         flex-direction: column
         gap: 4px
         font-size: 16px
+        text-align: left
         & span
             font-size: 14px
             font-weight: 400
